# altruistic-angelshark

./: .gitignore  CHANGELOG  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  asa.cfg.sample
.github/workflows/: publish.yml
angelsharkcli/: Cargo.toml  README.md
angelsharkcli/src/: main.rs
angelsharkd/: Cargo.toml  README.md
angelsharkd/src/: config.rs  main.rs
angelsharkd/src/routes/: dtos.rs  mod.rs
angelsharkd/src/routes/extensions/: README.md  mod.rs  simple_deprov.rs  simple_search.rs
angelsharkd/src/routes/extensions/simple_busy/: README.md  mod.rs
angelsharkd/src/routes/extensions/simple_deprov/: README.md  mod.rs
angelsharkd/src/routes/extensions/simple_search/: README.md  mod.rs  types.rs
libangelshark/: Cargo.toml
libangelshark/src/: acm.rs  lib.rs  message.rs  runner.rs
