[package]
name = "angelsharkd"
version = "0.2.0"
edition = "2021"
authors = ["Adam T. Carpenter <adam.carpenter@adp.com>"]
description = "A HTTP interface into one or more Communication Managers"

[features]
simple_search = []
simple_deprov = []

[dependencies.libangelshark]
path = "../libangelshark"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.warp]
version = "0.3"
default-features = false

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.9"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.anyhow]
version = "1"
